sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:8: error: value > is not a member of Unit
    if (distanceToDestination(previousBase, 0) > distanceToDestination(previousBase, 1)) {
                                               ^NaiveBaseball:18: warning: enclosing method distanceToDestination has result type Unit: return value discarded
  return (base - getPlayerColor(base, position)) % getBasesAmount(); 
  ^