sort.baseball.NaiveBaseball.scala.code
override def run() {
  var n = getBasesAmount();
  
  while (!isSorted()) {
    var holeBase = getHoleBase();
    var previousBase = (holeBase - 1) % n;
    
    if (distanceToDestination(previousBase, 0) > distanceToDestination(previousBase, 1)) {
      move(previousBase, 0);
    } else {
      move(previousBase, 1);
    }
    
  }
}

def distanceToDestination(base:Integer, position:Integer) {
  return (base - getPlayerColor(base, position)) % getBasesAmount(); 
}

